Corrijo warnings del spellchecker

--- a/main.tex
+++ b/main.tex
@@ -1488,7 +1488,7 @@ Se ha probado que este límite superior conservador es lo suficientemente genera
 
 \subsection{Límite en el número máximo de transacciones}
 
-Otra propiedad de Marlowe es que cualquier \texttt{Contract} tiene un límite finito implícito en el número máximo de \texttt{Transaccions} que acepta. Esta es una propiedad conveniente por dos razones:
+Otra propiedad de Marlowe es que cualquier contrato tiene un límite finito implícito en el número máximo de transacciones aceptadas. Esta es una propiedad conveniente por dos razones:
 
 En primer lugar, reduce el peligro de ataques de denegación de servicio (DoS): ya que el número de entradas válidas es limitado, un participante atacante no puede bloquear arbitrariamente el contrato mediante la emisión de una cantidad ilimitada de transacciones inútiles.
 
@@ -1514,7 +1514,7 @@ Por lo tanto, no perdemos generalidad al explorar solo \textit{traces} más cort
 \chapter[Verificación de contratos financieros en Isabelle]{Desarrollo: Verificación de contratos financieros usando Isabelle}
 
 % TODO: Completar resumen de capítulo
-En este capítulo se describirán los aportes realizados en la presente tésis. Por una parte, "...". WIP
+En este capítulo se describirán los aportes realizados en la presente tesis. Por una parte, WIP
 
 \section{Escritura de contratos ACTUS para Cardano}
 
