Agrego cita necesaria para termination de Auction

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -495,3 +495,11 @@
   title     = {Z3: An Efficient SMT Solver},
   year      = {2008}
 }
+@inproceedings{termination-isabelle,
+  title={Finding lexicographic orders for termination proofs in Isabelle/HOL},
+  author={Bulwahn, Lukas and Krauss, Alexander and Nipkow, Tobias},
+  booktitle={International Conference on Theorem Proving in Higher Order Logics},
+  pages={38--53},
+  year={2007},
+  organization={Springer}
+}
