--- a/main.tex
+++ b/main.tex
@@ -2575,9 +2575,14 @@ La misma demuestra que aplicar el \textit{loop} sobre el contrato PAM no hace de
 
 % TODO: WIP
 
-\subsection{Traducción del contrato Auction en Isabelle}
+\subsection{Traducción del contrato Auction a Isabelle}
+
+\subsection{Probando terminación del contrato}
 
 % TODO: WIP
+
+\cite{termination-isabelle}
+
 
 %##########################
 % Conclusión
