Agrego teoría de terminacion y funciones

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -85,6 +85,12 @@
   url    = {http://cardano-universe.com/wp-content/uploads/2019/02/ledger-spec.pdf},
   year   = {2019}
 }
+@misc{auction_haskell,
+  author       = {IOHK},
+  howpublished = {\url{https://github.com/input-output-hk/marlowe/blob/master/src/Language/Marlowe/Examples/Auction.hs}},
+  title        = {Auction contract, written in Haskell for the Cardano Blockchain},
+  year         = {2019}
+}
 
 @misc{cardano_website,
   author       = {Cardano},
