--- a/languages.tex
+++ b/languages.tex
@@ -33,8 +33,8 @@
 \definecolor{isarblue}{HTML}{006699}
 \definecolor{isargreen}{HTML}{009966}
 \definecolor{isarred}{HTML}{cc0000}
-\lstdefinelanguage{isabelle}{%
-    keywords=[1]{type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem,theory,corollary,apply,done,by,env,sta,reduce,warnings,payments,newstate,inputList,reduced},
+\lstdefinelanguage{isabelle}{
+    keywords=[1]{type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem,theory,corollary,apply,done,by,env,sta,reduce,warnings,payments,newstate,inputList,reduced,tra,trec,function,termination},
     morecomment=[s]{(*}{*)}, % chktex 9
     keywordstyle=[1]\bfseries\color{isarblue},
     keywords=[2]{where,assumes,shows,and,imports,begin,end,a,list,applyWarn,newState,cont},
@@ -43,7 +43,7 @@
     keywordstyle=[3]\color{isarblue},
     commentstyle=\color{isarred}
 }
-\lstdefinestyle{Isabelle}{%
+\lstdefinestyle{Isabelle}{
   language=isabelle,
   escapeinside={&}{&},
   columns=fixed,
